templates/handel-worker/handel-worker-ecs-old.yml
---
AWSTemplateFormatVersion: '2010-09-09'
Description: ECS Cluster
Parameters:
  ClusterName:
    Description: Name of the cluster to be created
    Type: String
  MinInstances:
    Description: Minimum number of instances in the cluster
    Type: Number
    Default: 1
  MaxInstances:
    Description: Maximum number of instances in the cluster
    Type: Number
    Default: 1
  InstanceType:
    Description: The type of ec2 instances to use in the cluster
    Type: String
    AllowedValues:
    - t2.nano
    - t2.micro
    - t2.small
    - t2.medium
    - t2.large
    - m4.large
    - m4.xlarge
    - m4.2xlarge
    - m3.medium
    - m3.large
    - m3.xlarge
    - m3.2xlarge
    ConstraintDescription: Must be a valid EC2 instance type
    Default: t2.micro
  KeyName:
    Description: The ssh key to assign to the nodes in the cluster.
    Type: AWS::EC2::KeyPair::KeyName
  AmiImageId:
    Description: The Amazon ECS optimized AMI image id
    Type: String
  AsgSubnetIds:
    Description: The list of subnet ids to deploy the cluster in
    Type: CommaDelimitedList
  DesiredCount:
    Description: The desired count of running tasks
    Type: Number
  TaskDefinitionArn:
    Description: The Task definition to use for the service
    Type: String
  MinimumHealthyPercentDeployment:
    Description: The minimum percent of tasks to keep running during a deployment
    Type: Number
    Default: 50
  AlbSubnets:
    Description: The list of subnet ids to deploy the cluster in
    Type: CommaDelimitedList
  ContainerName:
    Description: The name of the container from the task definition
    Type: String
  ContainerPort:
    Description: The port of your application in the container
    Type: Number
  VpcId:
    Description: The ID of the VPC in which you are running
    Type: String
  EfsMountTargetSubnets:
    Description: A comma delimited list of subnets for the EFS mount targets
    Type: CommaDelimitedList
  CidrIngress:
    Description: The CIDR to use for ingress access from public traffic
    Type: String
Resources:
  EfsFileSystem:
    Type: AWS::EFS::FileSystem
    Properties:
      FileSystemTags:
      - Key: Name
        Value:
          Ref: ClusterName
  EfsMountTargetSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: The security group for the EFS mount targets 
      VpcId:
        Ref: VpcId
  EfsMountTargetSecurityGroupIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId:
        Ref: EfsMountTargetSecurityGroup
      IpProtocol: tcp
      FromPort: 2049
      ToPort: 2049
      SourceSecurityGroupId:
        Ref: EcsSecurityGroup
  EfsMountAvailA:
    Type: AWS::EFS::MountTarget
    Properties:
      FileSystemId:
        Ref: EfsFileSystem
      SecurityGroups:
      - Ref: EfsMountTargetSecurityGroup
      SubnetId: !Select ["0", !Ref EfsMountTargetSubnets]
  EfsMountAvailB:
    Type: AWS::EFS::MountTarget
    Properties:
      FileSystemId:
        Ref: EfsFileSystem
      SecurityGroups:
      - Ref: EfsMountTargetSecurityGroup
      SubnetId: !Select ["1", !Ref EfsMountTargetSubnets]
  EcsIamRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
        - Effect: Allow
          Principal:
            Service:
            - ec2.amazonaws.com
          Action:
          - sts:AssumeRole
      ManagedPolicyArns:
      - arn:aws:iam::aws:policy/service-role/AmazonEC2ContainerServiceforEC2Role
  EcsInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: "/"
      Roles:
      - Ref: EcsIamRole
  EcsSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: The security group for the ECS instances
      VpcId:
        Ref: VpcId
      SecurityGroupIngress:
      - CidrIp: 
          Ref: CidrIngress
        FromPort: 22
        ToPort: 22
        IpProtocol: tcp
  EcsLaunchConfiguration:
    Type: AWS::AutoScaling::LaunchConfiguration
    Properties:
      AssociatePublicIpAddress: false
      BlockDeviceMappings:
      - DeviceName: "/dev/xvda"
        Ebs:
          VolumeSize: 8
          VolumeType: gp2
          DeleteOnTermination: true
      - DeviceName: "/dev/xvdcz"
        Ebs:
          VolumeSize: 22
          VolumeType: gp2
          DeleteOnTermination: true
      IamInstanceProfile:
        Ref: EcsInstanceProfile
      ImageId:
        Ref: AmiImageId
      InstanceMonitoring: false
      InstanceType:
        Ref: InstanceType
      SecurityGroups:
      - Ref: EcsSecurityGroup
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          echo "Mounting EFS"
          yum install -y nfs-utils
          mkdir -p /mnt/share/handel-worker
          mount -t nfs4 -o nfsvers=4.1,rsize=1048576,wsize=1048576,hard,timeo=600,retrans=2 ${EfsFileSystem}.efs.us-west-2.amazonaws.com:/ /mnt/share/handel-worker
          echo "Finished Mounting EFS"
      KeyName:
        Ref: KeyName
  EcsAutoScalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      Cooldown: 300
      DesiredCapacity:
        Ref: MinInstances
      HealthCheckGracePeriod: 300
      HealthCheckType: EC2
      LaunchConfigurationName:
        Ref: EcsLaunchConfiguration
      MaxSize:
        Ref: MaxInstances
      MinSize:
        Ref: MinInstances
      VPCZoneIdentifier:
        Ref: AsgSubnetIds
  EcsAutoScalingPolicyUp:
    Type: AWS::AutoScaling::ScalingPolicy
    Properties:
      AdjustmentType: ChangeInCapacity
      AutoScalingGroupName:
        Ref: EcsAutoScalingGroup
      ScalingAdjustment: 1
  EcsAutoScalingPolicyDown:
    Type: AWS::AutoScaling::ScalingPolicy
    Properties:
      AdjustmentType: ChangeInCapacity
      AutoScalingGroupName:
        Ref: EcsAutoScalingGroup
      ScalingAdjustment: -1
  EcsCluster:
    Type: AWS::ECS::Cluster
    Properties:
      ClusterName:
        Ref: ClusterName
  EcsService:
    Type: AWS::ECS::Service
    DependsOn:
    - AlbListener
    - EcsCluster
    Properties:
      Cluster:
        Ref: EcsCluster
      DesiredCount:
        Ref: DesiredCount
      DeploymentConfiguration:
        MinimumHealthyPercent:
          Ref: MinimumHealthyPercentDeployment
      LoadBalancers:
      - ContainerName:
          Ref: ContainerName
        ContainerPort:
          Ref: ContainerPort
        TargetGroupArn:
          Ref: AlbTargetGroup
      Role: arn:aws:iam::720403456965:role/ecsServiceRole
      TaskDefinition:
        Ref: TaskDefinitionArn
  Alb:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    DependsOn: AlbSecurityGroup
    Properties:
      Name:
        Ref: ClusterName
      Scheme: internet-facing
      LoadBalancerAttributes:
      - Key: idle_timeout.timeout_seconds
        Value: '30'
      Subnets:
        Ref: AlbSubnets
      SecurityGroups:
      - Ref: AlbSecurityGroup
  AlbSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for ALB
      VpcId:
        Ref: VpcId
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '80'
        ToPort: '80'
        CidrIp: 0.0.0.0/0
  EcsIngressFromAlb:
    Type: AWS::EC2::SecurityGroupIngress
    DependsOn: AlbSecurityGroup
    Properties:
      GroupId:
        Ref: EcsSecurityGroup
      IpProtocol: tcp
      FromPort: '0'
      ToPort: '65535'
      SourceSecurityGroupId:
        Ref: AlbSecurityGroup
  AlbListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    DependsOn:
    - AlbTargetGroup
    - Alb
    Properties:
      DefaultActions:
      - Type: forward
        TargetGroupArn:
          Ref: AlbTargetGroup
      LoadBalancerArn:
        Ref: Alb
      Port: '80'
      Protocol: HTTP
  AlbListenerRule:
    Type: AWS::ElasticLoadBalancingV2::ListenerRule
    DependsOn:
    - AlbListener
    - AlbTargetGroup
    Properties:
      Actions:
      - Type: forward
        TargetGroupArn:
          Ref: AlbTargetGroup
      Conditions:
      - Field: path-pattern
        Values:
        - "/"
      ListenerArn:
        Ref: AlbListener
      Priority: 1
  AlbTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckIntervalSeconds: 10
      HealthCheckPath: "/"
      HealthCheckProtocol: HTTP
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 2
      Name:
        Ref: ClusterName
      Port: 80
      Protocol: HTTP
      UnhealthyThresholdCount: 2
      VpcId:
        Ref: VpcId
Outputs:
  EcsClusterId:
    Description: The EcsClusterId
    Value:
      Ref: EcsCluster
